--- a/WebContent/comet.chat.css
+++ b/WebContent/comet.chat.css
@@ -14,19 +14,23 @@
     font-weight: bold;	
 } */
 .fromUserName{
+	float: right;
 	background:#d4e7fa;
 	padding:5px;
 	min-height:15px;
 	margin-bottom:5px;
-	position:relative;
-	margin-left:10px;
+	margin-left:5px; 
 	border-radius:5px;
 	word-break: break-all;
+	font-size: 10px;
 }
 .fromMessage {
+	float: right;
+	background:#d4e7fa;
+	padding:5px;
     color: #9A2EFE;
     font-family: sans-serif;
-    font-size: 10px;
+    font-size: 15px;
 }
 
 .toUserName {
@@ -34,21 +38,23 @@
 	padding:5px;
 	min-height:15px;
 	margin-bottom:5px;
-	position:relative;
-	margin-left:10px;
+	margin-left:5px; 
 	border-radius:5px;
 	word-break: break-all;
+	font-size:10px;
 }
 
 .toMessage {
-     color: #9A2EFE;
+	background:#d4e7fa;
+	padding:5px;
+    color: #9A2EFE;
     font-family: sans-serif;
-    font-size: 10px;
+    font-size: 15px;
 }
 .windowTitle {
 	color: #FFFFFF;
 	font-family: Avenir;
-	font-size: 12px; 
+	font-size: 15px; 
 	font-weight: bold;
 	float: left;
 	position: relative;
@@ -127,48 +133,74 @@ body{
  #chat-sidebar {
      width: 250px;
      position: fixed;
-     height: 80%;
+     height: 90%;
      right: 0px;
      top: 20%;
-     padding-top: 10px;
+     padding-top: 5px;
      padding-bottom: 10px;
-     border: 1px solid #b2b2b2;
+     border: 3px solid #000;
 }
- #sidebar-user-box {
-     padding: 4px;
-     margin-bottom: 4px;
-     font-size: 15px;
-     font-family: Calibri;
-     font-weight:bold;
-     cursor:pointer;
-}
- #sidebar-user-box:hover {
-     background-color:#e5e5e5;
-}
- #sidebar-user-box:after {
-     content: ".";
-     display: block;
-     height: 0;
-     clear: both;
-     visibility: hidden;
-}
+
  img{
      width:35px;
      height:35px;
      border-radius:50%;
      float:left;
 }
- #slider-username{
-     float:left;
-     line-height:30px;
-     margin-left:5px;
+
+/**** Slider nav barLayout Popup *********/
+
+body {font-family: "Lato", sans-serif;}
+
+.sidebar {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 16px;
 }
- 
 
+body {
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 0 20px;
+}
 
+.container {
+  border: 2px solid #dedede;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  padding: 2px;
+  margin: 5px 0;
+}
 
+.darker {
+  border-color: #ccc;
+  background-color: #ddd;
+}
 
+.container::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.container img {
+  float: left;
+  max-width: 60px;
+  width: 100%;
+  margin-right: 2px;
+  border-radius: 50%;
+}
 
+.container img.right {
+  float: right;
+  margin-left: 2px;
+  margin-right:0;
+}
 
 
 
